--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^18.6.3",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
@@ -26,7 +27,12 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/validator": "^13.11.7",
+    "bcrypt": "^5.1.1",
     "express": "^4.18.1",
-    "mongoose": "^6.5.0"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^6.5.0",
+    "validator": "^13.11.0"
   }
 }
