--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@types/bcrypt": "^5.0.2",
     "@types/validator": "^13.11.7",
     "bcrypt": "^5.1.1",
+    "celebrate": "^15.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.1",
     "express-winston": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
