--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.1",
     "express-winston": "^4.2.0",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.5.0",
     "validator": "^13.11.0",
